# sol-2z-conversion-v1

./: .gitignore  Anchor.toml  Cargo.toml  README.md  build_and_deploy.sh  build_utils.sh  config.json  provision.sh  run_tests.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
.keys/: integrating_contract-keypair.json
admin-cli/: Cargo.toml  config.json
admin-cli/src/: command.rs  handler.rs
admin-cli/src/core/: config.rs  mod.rs
admin-cli/src/core/common/: error.rs  instruction.rs  structs.rs
admin-cli/src/core/functions/: admin_handler.rs  config_handler.rs  deny_list.rs  fills_registry.rs  init_handler.rs  mock_token_handler.rs  mod.rs  set_fills_consumer.rs  system_state.rs  update_dequeuer_handler.rs  withdraw_2z.rs
api/: metrics.openapi.yaml
cli-common/: Cargo.toml
cli-common/src/: config.rs  constant.rs  lib.rs  seeds.rs  structs.rs  transaction_executor.rs
cli-common/src/common_functions/: mod.rs  view_fills.rs
cli-common/src/utils/: env_var.rs  error_handler.rs  fixed_point_utils.rs  mod.rs  pda_helper.rs  return_data.rs  token_utils.rs
deployment/: Instructions.md  README.md  deploy.sh  main.tf  outputs.tf  variables.tf
deployment/account/: backend_config.tf  main.tf  outputs.tf  variables.tf
deployment/ansible/: ansible.cfg  deploy.yml  inventory.yml
deployment/environments/: backend_config.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
deployment/regional/: backend_config.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
deployment/script/: account_creation.sh  common.sh  deploy_application.sh  deploy_indexer.sh  deploy_update.sh  env_creation.sh  one_time_setup.sh  publish_and_deploy.sh  regional_creation.sh  release.sh  script.py
e2e/: admin-e2e.ts  package-lock.json  package.json  tsconfig.json
integration-cli/: Cargo.toml
integration-cli/src/: command.rs  handler.rs  main.rs
integration-cli/src/core/: mod.rs
integration-cli/src/core/common/: error.rs  instruction.rs  mod.rs  structs.rs
integration-cli/src/core/function/: dequeue_fills.rs  mod.rs
mock-double-zero-program/: .gitignore  Anchor.toml  Cargo.toml  build_and_deploy.sh  package.json
mock-double-zero-program/.keys/: mock-double-zero-program-keypair.json
mock-double-zero-program/programs/mock-double-zero-program/: Cargo.toml
mock-double-zero-program/programs/mock-double-zero-program/src/: lib.rs
mock-double-zero-program/programs/mock-double-zero-program/src/instructions/: config.rs  initialize.rs  mint_2z.rs  mod.rs  revenue_distribution_journal.rs  withdraw_2z.rs  withdraw_sol.rs
mock-double-zero-program/src/: error.rs  instruction.rs  lib.rs  processor.rs
mock-double-zero-program/src/common/: error.rs  mod.rs  seeds.rs
mock-double-zero-program/src/common/utils/: account_utils.rs  assertion_utils.rs  mod.rs
mock-double-zero-program/src/instructions/: initialize.rs  mint_2z.rs  mod.rs  withdraw_sol.rs
mock-double-zero-program/tests/core/: constants.ts
mock-double-zero-program/tests/core/utils/: pda-helper.ts  token-utils.ts
off-chain/: README.md
on-chain/: .gitignore  Anchor.toml  Cargo.toml  build_and_deploy.sh  config.json  package-lock.json  package.json  run_tests.sh  setup_dev.sh
on-chain/programs/converter-program/: Cargo.toml
on-chain/programs/converter-program/src/: buy_sol.rs  calculate_ask_price.rs  deny_list_registry.rs  error.rs  init_system.rs  lib.rs  program_state.rs  sample_deny_list_registry_v2.rs
on-chain/programs/converter-program/src/common/: attestation_utils.rs  constant.rs  error.rs  errors.rs  mod.rs  seeds.rs  structs.rs
on-chain/programs/converter-program/src/common/errors/: mod.rs  permission_errors.rs
on-chain/programs/converter-program/src/common/events/: config.rs  deny_list.rs  dequeuer.rs  fill_consumer.rs  init.rs  mod.rs  system.rs  trade.rs
on-chain/programs/converter-program/src/common/seeds/: mod.rs  seed_prefix_current_versions.rs  seed_prefix_v1.rs  seed_prefix_v2.rs  seed_prefixes.rs  seed_prefixes_v1.rs  seed_prefixes_v2.rs
on-chain/programs/converter-program/src/common/utils/: attestation_utils.rs  mod.rs
on-chain/programs/converter-program/src/configuration/: configuration_registry.rs
on-chain/programs/converter-program/src/configuration_registry/: configuration_registry.rs  configuration_registry_v2.rs  mod.rs  sample_configuration_registry_v2.rs  set_fills_consumer.rs  update_configuration.rs  update_dequeuers.rs
on-chain/programs/converter-program/src/deny_list/: deny_list_registry.rs  mod.rs
on-chain/programs/converter-program/src/deny_list_registry/: deny_list_registry.rs  deny_list_registry_v2.rs  mod.rs  sample_deny_list_registry_v2.rs
on-chain/programs/converter-program/src/discount_rate/: calculate_ask_price.rs  calculate_discount.rs  discount_utils.rs  mod.rs
on-chain/programs/converter-program/src/fill_data/: fills_registry.rs  mod.rs
on-chain/programs/converter-program/src/fills_registry/: dequeue_fills.rs  fills_registry.rs  mod.rs  queue_implementation.rs
on-chain/programs/converter-program/src/initialize/: init_system.rs  mod.rs
on-chain/programs/converter-program/src/migration/: migrate_v1_to_v2.rs  mod.rs  rollback_v2_to_v1.rs  sample_configuration_registry_v2.rs  sample_deny_list_registry_v2.rs
on-chain/programs/converter-program/src/state/: bump_registry.rs  mod.rs  program_state.rs  trade_registry.rs
on-chain/programs/converter-program/src/system_management/: mod.rs  set_admin.rs  set_deny_list_authority.rs  system_state.rs
on-chain/programs/converter-program/src/user_flow/: buy_sol.rs  mod.rs
on-chain/programs/converter-program/src/validator_deposit/: epoch_chunk.rs  mod.rs
programs/integrating-contract/: Cargo.toml
programs/integrating-contract/src/: lib.rs
shared/: Cargo.toml
tests/: converter-program.ts
user-cli/: Cargo.toml  config.json
user-cli/src/: command.rs  handler.rs  main.rs
user-cli/src/core/: config.rs  mod.rs
user-cli/src/core/common/: instruction.rs  mod.rs  structs.rs
user-cli/src/core/function/: buy_sol.rs  mod.rs  query_handler.rs
user-cli/src/core/utils/: mod.rs  price_utils.rs
(+288 files in other folders)
