[workspace]
members = [
    "./on-chain/programs/*",
    "cli-common",
    "admin-cli",
    "user-cli"
]
resolver = "2"

[workspace.dependencies]
# Anchor framework
anchor-lang = "0.31.1"
anchor-client = "0.31.1"
anchor-spl = "0.31.1"


## on-chain
base64 = "0.22.1"
brine-ed25519 = "0.2.0"

# Workspace members (internal dependencies)
cli-common = { path = "cli-common" }


### CLI Serialization
serde="1.0.219"
serde_json = "1.0.141"

### CLI
clap = { version = "4.5.42", features = ["derive"] }
solana-loader-v3-interface = "5.0.0"

## CLI Rest
tokio = { version = "1.47.0", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
