[workspace]
members = [
    "./on-chain/programs/converter-program",
    "cli-common",
    "admin-cli",
    "user-cli",
    "integration-cli",
    "mock-double-zero-program/programs/mock-double-zero-program"
]
resolver = "2"

[workspace.dependencies]
# Anchor framework
anchor-lang = "0.31.1"
anchor-client = "0.31.1"
anchor-spl = "0.31.1"


## on-chain
base64 = "0.22.1"
brine-ed25519 = "0.2.0"
bytemuck = { version = "1.20.0", features = ["min_const_generics"] }

# Workspace members (internal dependencies)
cli-common = { path = "cli-common" }

### CLI Serialization
serde="1.0.219"
serde_json = "1.0.141"

### CLI Deserialization
solana-transaction-status = "2.3.6"

### CLI
clap = { version = "4.5.42", features = ["derive"] }
rust_decimal = "1.37.2"
spl-token-2022 = "9.0.0"
spl-associated-token-account = "7.0.0"

## CLI Rest
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.47.0", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
