[package]
name = "admin-cli"
version = "0.1.0"
edition = "2021"
description = "Admin CLI for Double Zero Fee Converter System"

[dependencies]
anchor-client = { workspace = true }
clap = { workspace = true }
cli-common = { workspace = true }

[dependencies.converter-program]
path = "../on-chain/programs/converter-program"