[package]
name = "cli-common"
version = "0.1.0"
edition = "2021"
description = "Shared utilities and common functionality for Double Zero command-line interfaces including transaction execution, account management, and configuration handling"

[dependencies]
anchor-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-transaction-status = { workspace = true }
base64 = { workspace = true }
rust_decimal = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
bytemuck = {workspace = true}
solana-commitment-config = { workspace = true }