[package]
name = "mock-double-zero-program"
version = "0.1.0"
description = "Mock Transfer Program for simulating 2Z transfer operation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_transfer_program"

[features]
no-entrypoint = []


[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }