[package]
name = "user-cli"
version = "0.1.0"
edition = "2021"
description = "Admin CLI for Double Zero Fee Converter System"

[dependencies]
anchor-client = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
cli-common = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
