[package]
name = "user-cli"
version = "0.1.0"
edition = "2021"
description = "User CLI for Double Zero Fee Converter System"

[dependencies]
anchor-client = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
cli-common = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
spl-token-2022 = { workspace = true }
