[package]
name = "integrating_contract"
version = "0.1.0"
description = "Contract for integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "integrating_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
