[package]
name = "mock-double-zero-program"
version = "0.1.0"
description = "Mock Transfer Program for simulating 2Z transfer operation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_transfer_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }