[package]
name = "converter-program"
version = "0.1.0"
description = "Core program managing all on-chain operations, including 2Z-to-SOL conversions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "converter_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { workspace = true }
rust_decimal = { workspace = true }
base64 = { workspace = true }
brine-ed25519 = {workspace = true}
